# sdl-first

./: CMakeLists.txt  README.md  main.c
